sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:7: error: not found: value plusPeti
      if (plusPeti(i+1, i)){
          ^