sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var c = 1
  do {
    c=0
    for ( i <- 0 to getNombreValeurs()-2){
      if (plusPeti(i+1, i)){
        echange(i+1, i)
        c += 1
      }
    }
    for (j <- getNombreValeurs-2 to 0){
      if (plusPetit(j, j+1)){
        echange(j, j+1)
        c += 1
      }
    }
  } while( c!=0)
}